Added TrainViTCifar10.java example: End-to-end training of Vision Transformer on CIFAR-10 with GPU acceleration